# Valutron

./: .clang-format  .gitignore  CMakeLists.txt  CPYRIGHT  CPYRIGHT.md  README.md
doc/: Valutron.txt
eval/: CMakeLists.txt  analyse.y  eval.c  eval.cxx  eval.l  eval.y  evctx.h  scan.l  values.cxx
eval/include/: values.hpp  vm.hpp
kernel/: CMakeLists.txt  eval.cxx  eval.y  misc.h  scanner.l
kernel/automgr/: automgr.cxx  automgr.h
kernel/compile/: cbuiltin.cxx  compile.cxx  compile.h  comptype.cxx
kernel/type/: builtin.cxx  values.cxx  values.h
kernel/vm/: vm.cxx  vm.h  vmop.cxx  vmop.h
util/btyacc/: CMakeLists.txt  btyaccpar.c  closure.c  config.h  defs.h  error.c  graph.c  lalr.c  lr0.c  main.c  mkpar.c  mstring.c  output.c  reader.c  symtab.c  verbose.c  warshall.c
